src/test/ui/rfc-2497-if-let-chains/invalid-let-in-a-valid-let-context.stderr
error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:6:19
   |
LL |         let _ = &&let Some(x) = Some(42);
   |                   ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:11:47
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = &&let Some(x) = Some(42)] = 1 {
   |                                               ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:11:57
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = &&let Some(x) = Some(42)] = 1 {
   |                                                         ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:21:23
   |
LL |             [1, 2, 3][let _ = ()];
   |                       ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:30:47
   |
LL |         if let Some(elem) = _opt && [1, 2, 3][let _ = ()] = 1 {
   |                                               ^^^

error: expected expression, found `let` statement
  --> $DIR/invalid-let-in-a-valid-let-context.rs:38:21
   |
LL |             let x = let y = 1;
   |                     ^^^

error: aborting due to 6 previous errors

